examples/test/testpolicy12091.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12091
  namespace: namespace120
spec:
  podSelector:
    matchLabels:
      key10: value10
      key32: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value39
      podSelector:
        matchLabels:
          key5: value28
          key19: value14
          key28: value17
